# polymkt

./: .claudeignore  .gitignore  README.md  examples.py  package-lock.json  package.json  progress.txt  pyproject.toml
.github/workflows/: data-api-sync.yml  gamma-sync.yml  trades-sync.yml
config/: aws_policy.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  ConfirmationModal.test.tsx  ConfirmationModal.tsx  EmptyState.tsx  EquityCurveChart.tsx  Layout.tsx  LoadingSpinner.tsx  MarketList.test.tsx  MarketList.tsx  MarketSearch.tsx  StrategyConfirmationContent.tsx  index.ts
frontend/src/pages/: BacktestDetailPage.tsx  BacktestsPage.tsx  CreateBacktestPage.tsx  CreateDatasetPage.tsx  DatasetDetailPage.tsx  DatasetsPage.tsx  EditDatasetPage.tsx  HomePage.tsx  index.ts
frontend/src/types/: index.ts
plans/: prd.json  ralph.sh
scripts/: s3_catchup.py  s3_data_api_sync.py  s3_gamma_sync.py  s3_trades_catchup.py  update_events.py
src/polymkt/: __init__.py  config.py  logging.py
src/polymkt/agents/: __init__.py  backtesting_agent.py  dataset_agent.py
src/polymkt/api/: main.py
src/polymkt/backtest/: __init__.py  engine.py
src/polymkt/models/: schemas.py
src/polymkt/pipeline/: __init__.py  bootstrap.py  cloud_bootstrap.py  curate.py  normalize.py  s3_rewrite.py  s3_update.py  update.py
src/polymkt/services/: __init__.py  ingestion.py  llm_analytics.py  positions.py
src/polymkt/signals/: __init__.py  favorites.py
src/polymkt/storage/: __init__.py  backtests.py  clickhouse.py  cost_efficiency.py  data_quality.py  datasets.py  duckdb_layer.py  election_groups.py  hybrid_search.py  metadata.py  parquet.py  performance.py  schema_evolution.py  search.py  search_index_updater.py  semantic_search.py
tests/: conftest.py  test_api.py  test_backtest_engine.py  test_backtesting_agent.py  test_backtests.py  test_bootstrap.py  test_cost_efficiency.py  test_data_quality.py  test_dataset_agent.py  test_datasets.py  test_days_to_exp.py  test_election_groups.py  test_event_search_update.py  test_events_schema.py  test_favorites.py  test_hybrid_search.py  test_incremental_search_update.py  test_layers.py  test_normalize.py  test_partitioning.py  test_performance.py  test_poly_data_integration.py  test_query_interface.py  test_reliability.py  test_schema_evolution.py  test_search.py  test_semantic_search.py  test_unified_search_api.py  test_update.py
