[project]
name = "polymkt"
version = "0.1.0"
description = "Prediction market analytics platform with DuckDB-over-Parquet storage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "duckdb>=1.0.0",
    "pyarrow>=15.0.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "ipykernel>=7.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "pandas-stubs>=2.1.4",
    "types-requests>=2.31.0",
    "types-psutil>=5.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "duckdb", "duckdb.*", "openai", "openai.*", "boto3", "boto3.*", "clickhouse_connect", "clickhouse_connect.*", "polars", "polars.*", "gql", "gql.*", "psutil", "psutil.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["polymkt.storage.parquet", "polymkt.pipeline.bootstrap", "polymkt.pipeline.cloud_bootstrap", "polymkt.storage.clickhouse", "polymkt.pipeline.s3_rewrite", "polymkt.pipeline.s3_update"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_any_expr = false
disable_error_code = ["var-annotated", "index", "attr-defined", "arg-type", "assignment", "no-any-return", "type-arg", "no-untyped-def", "import-untyped"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
disable_error_code = ["no-untyped-def", "index", "arg-type", "misc", "type-arg", "union-attr"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
